syntax = "proto3";
package SMS;

message Send
{
	string host = 1;
	string username = 2;
	string password = 3;
	string mobile = 4;
	string message = 5;

	message MetaData
	{
		string code = 1;
		string text = 2;
		int32 msgid = 3;
	}

	message Result
	{
		string veri_code = 1;
		int32 msgid = 2;		// receipt from SMS vendor
	}
}

message Error
{
	Error.ERROR_CODE code = 1;
	bytes msg = 2;

	enum ERROR_CODE
	{
		CONNECTION_FAILED = 0;
		UNFINISHED_FLOW = 1;
		UNAUTHORIZED_ERROR = 2;
		DATA_ERROR = 3;
		SYSTEM_ERROR = 4;
	}
}