syntax = "proto3";
package WSClient;

message Subscribe
{
	string id = 1;				// id=='' means uuid will be generated by WSClient
	string hostname = 2;
	string uri = 3;
	string cert_filename = 4;
	string request = 5;
	message Result
	{
		string id = 1;
		bool first_one = 2;
	}
	message Error
	{
		string id = 1;
		int32 err_code = 2;
		string err_message = 3;
	}
}

message PlaceOrder
{
	string id = 1;				// id=='' means uuid will be generated by WSClient
	string request = 2;
	message Result
	{
		string id = 1;
		bool first_one = 2;
	}
	message Error
	{
		string id = 1;
		int32 err_code = 2;
		string err_message = 3;
	}
}

message Unsubscribe
{
	string id = 1;
	string request = 2;
	message Result
	{
		string id = 1;
		bool last_one = 2;
	}
}

message Message
{
	string id = 1;
	bytes payload = 2;
}

message Keepalive
{
	string request = 1;
	uint64 interval = 2;		// msec
	bool period = 3;
}

message Disconnected
{
	string id = 1;
}

message ResetAll
{
}